1999-05-16  Roland McGrath  <roland@baalperazim.frob.com>
* sysdeps/unix/sysv/linux/sys/socketvar.h: Moved to ... 
* sysdeps/generic/sys/socketvar.h: ... here. 
* sysdeps/unix/sysv/linux/netinet/in_systm.h: Moved to ... 
* sysdeps/generic/netinet/in_systm.h: ... here. 
* sysdeps/unix/sysv/linux/Dist: Remove netinet/in_systm.h, 
sys/socketvar.h. 
* sysdeps/unix/sysv/linux/Makefile (sysdep_headers): Likewise. 
* inet/Makefile (headers): Add netinet/in_systm.h here. 
* socket/Makefile (headers): Add sys/socketvar.h here.

--- a/socket/Makefile
+++ b/socket/Makefile
@@ -21,7 +21,8 @@
 #
 subdir	:= socket
 
-headers	:= sys/socket.h sys/un.h bits/sockaddr.h bits/socket.h
+headers	:= sys/socket.h sys/un.h bits/sockaddr.h bits/socket.h \
+	   sys/socketvar.h
 
 routines := accept bind connect getpeername getsockname getsockopt	\
 	    listen recv recvfrom recvmsg send sendmsg sendto		\
