--- a/localedata/Makefile
+++ b/localedata/Makefile
@@ -86,7 +86,7 @@ endif
 endif
 
 # Sometimes the whole collection of locale files should be installed.
-LOCALEDEF=$(common-objpfx)elf/ld.so --library-path $(rpath-link) $(common-objpfx)locale/localedef
+LOCALEDEF=I18NPATH=. $(common-objpfx)elf/ld.so --library-path $(rpath-link) $(common-objpfx)locale/localedef
 install-locales:
 	while read locale charset; do \
 	   case $$locale in \#*) continue;; esac; \
