--- a/config.make.in
+++ b/config.make.in
@@ -9,6 +9,7 @@ release = @RELEASE@
 install_root =
 prefix = @prefix@
 exec_prefix = @exec_prefix@
+libdir = @libdir@
 slibdir = @libc_cv_slibdir@
 sysconfdir = @libc_cv_sysconfdir@
 libexecdir = @libexecdir@
