--- a/config.h.in
+++ b/config.h.in
@@ -77,6 +77,9 @@
 # define internal_function __attribute__ ((regparm (3), stdcall))
 #endif
 
+/* Linux specific: minimum supported kernel version.  */
+#undef	__LINUX_KERNEL_VERSION
+
 /*
  */
 
