--- a/configure.in
+++ b/configure.in
@@ -136,7 +136,7 @@ AC_SUBST(force_install)
 dnl On some platforms we allow dropping compatibility with all kernel
 dnl versions.
 AC_ARG_ENABLE(kernel,
-[  --enable-kernel=VERSION compile for copmatibility with kernel not older
+[  --enable-kernel=VERSION compile for compatibility with kernel not older
                            than VERSION],
               minimum_kernel=$enableval)
 
