--- a/sysdeps/unix/sysv/linux/configure.in
+++ b/sysdeps/unix/sysv/linux/configure.in
@@ -16,14 +16,14 @@ if test -n "$sysheaders"; then
 fi
 define([libc_cv_linuxVER], [libc_cv_linux]patsubst(LIBC_LINUX_VERSION,[\.]))dnl
 AC_CACHE_CHECK(installed Linux kernel header files, libc_cv_linuxVER, [dnl
-AC_TRY_COMPILE([#include <linux/version.h>],
-[#if LINUX_VERSION_CODE < ]dnl
+AC_EGREP_CPP([eat flaming death], [#include <linux/version.h>
+#if !defined LINUX_VERSION_CODE || LINUX_VERSION_CODE < ]dnl
 patsubst(LIBC_LINUX_VERSION,[^\([^.]*\)\.\([^.]*\)\.\([^.]*\)$],dnl
 [ (\1 *65536+ \2 *256+ \3) /* \1.\2.\3 */])[
 eat flaming death
 #endif],
-	       libc_cv_linuxVER='LIBC_LINUX_VERSION or later',
-	       libc_cv_linuxVER='TOO OLD!')])
+	     libc_cv_linuxVER='TOO OLD!',
+	     libc_cv_linuxVER='LIBC_LINUX_VERSION or later')])
 if test "$libc_cv_linuxVER" != 'LIBC_LINUX_VERSION or later'; then
   AC_MSG_ERROR([GNU libc requires kernel header files from
 Linux LIBC_LINUX_VERSION or later to be installed before configuring.
@@ -40,25 +40,19 @@ fi
 if test -n "$minimum_kernel"; then
   AC_MSG_CHECKING(for kernel header at least $minimum_kernel)
 changequote(,)dnl
-  decnum=`echo "$minimum_kernel.0.0.0" | sed 's/\([0-9]*\)\.\([0-9]*\)\.\(\([0-9]*\)\|\).*/(\1 * 65536 + \2 * 256 + \3)/'`;
+  decnum=`echo "$minimum_kernel.0.0.0" | sed 's/\([0-9]*\)\.\([0-9]*\)\.\([0-9]*\).*/(\1 * 65536 + \2 * 256 + \3)/'`;
 changequote([,])dnl
-  cat > conftest.$ac_ext <<EOF
-#include <linux/version.h>
-int main() {
+  AC_EGREP_CPP([eat flaming death], [#include <linux/version.h>
 #if LINUX_VERSION_CODE < $decnum
 eat flaming death
-#endif
-; return 0; }
-EOF
-  if { (eval echo configure:30: \"$ac_compile\") 1>&5; (eval $ac_compile) 2>&5; }; then
+#endif], libc_minimum_kernel='too old!', libc_minimum_kernel=ok)
+  AC_MSG_RESULT($libc_minimum_kernel)
+  if test "$libc_minimum_kernel" = ok; then
     AC_DEFINE_UNQUOTED(__LINUX_KERNEL_VERSION, $decnum)
-    AC_MSG_RESULT(ok)
   else
-    AC_MSG_RESULT(too old!)
-    AC_MSG_ERROR([*** The available kernel headers are not at least as old as the requested
+    AC_MSG_ERROR([*** The available kernel headers are older than the requested
 *** compatible kernel version])
   fi
-  rm -f conftest*
 fi
 
 if test -n "$sysheaders"; then
