--- a/configure.in
+++ b/configure.in
@@ -264,6 +264,8 @@ irix6*)
   base_os=unix/sysv/irix6/$os ;;
 solaris[2-9]*)
   base_os=unix/sysv/sysv4 ;;
+hpux*)
+  base_os=unix/sysv/hpux/$os ;;
 none)
   base_os=standalone ;;
 *)
@@ -656,10 +658,10 @@ fi
 AC_CACHE_CHECK(for assembler global-symbol directive,
 	       libc_cv_asm_global_directive, [dnl
 libc_cv_asm_global_directive=UNKNOWN
-for ac_globl in .globl .global; do
+for ac_globl in .globl .global .EXPORT; do
   cat > conftest.s <<EOF
 .text
-${ac_globl} foo
+	${ac_globl} foo
 foo:
 EOF
   if ${CC-cc} $CFLAGS -c conftest.s 2>/dev/null; then
