--- a/stdlib/Makefile
+++ b/stdlib/Makefile
@@ -1,4 +1,4 @@
-# Copyright (C) 1991, 92, 93, 94, 95, 96, 97, 98 Free Software Foundation, Inc.
+# Copyright (C) 1991,92,93,94,95,96,97,98,99 Free Software Foundation, Inc.
 # This file is part of the GNU C Library.
 
 # The GNU C Library is free software; you can redistribute it and/or
@@ -51,7 +51,7 @@ routines	:=							      \
 
 distribute	:= exit.h grouping.h abort-instr.h isomac.c
 tests		:= tst-strtol tst-strtod testmb testrand testsort testdiv \
-		   test-canon test-canon2
+		   test-canon test-canon2 tst-strtoll
 
 
 # Several mpn functions from GNU MP are used by the strtod function.
