--- a/configure.in
+++ b/configure.in
@@ -1236,6 +1236,10 @@ RELEASE=`sed -n -e 's/^#define RELEASE "\([^"]*\)"/\1/p' < $srcdir/version.h`
 AC_SUBST(VERSION)
 AC_SUBST(RELEASE)
 
+echo '*** Do NOT install this release on any production system!'
+echo '*** It is known to be broken and will be so for quite some time.'
+echo '*** Use the latest released version instead.'
+
 AC_OUTPUT(config.make glibcbug ${config_makefile} ${config_uname}, [
 case $CONFIG_FILES in *config.make*)
 echo "$config_vars" >> config.make;;
