* sysdeps/gnu/siglist.h: File moved to ...
	* sysdeps/generic/siglist.h: ... here.  This file should be usable for
	any platform, since it just associates the SIG* macros with text names
	and descriptions. For any signal macros do not exist on every
	platform, we can use #ifdef tests here and still use this single
	common file for all platforms.
	* sysdeps/generic/siglist.c: Rewrite using <siglist.h>.  This file
	should be usable for all platforms after the binary compatibility
	stuff in the current sysdeps/gnu version is no longer required.
	* sysdeps/generic/Makefile: Remove rules for generating siglist.c.
	* sysdeps/generic/make_siglist.c: File removed.

1999-06-16  Roland McGrath  <roland@baalperazim.frob.com>

--- a/sysdeps/generic/Makefile
+++ b/sysdeps/generic/Makefile
@@ -1,4 +1,4 @@
-# Copyright (C) 1992, 93, 94, 95, 96, 97 Free Software Foundation, Inc.
+# Copyright (C) 1992,93,94,95,96,97,99 Free Software Foundation, Inc.
 # This file is part of the GNU C Library.
 
 # The GNU C Library is free software; you can redistribute it and/or
@@ -31,27 +31,6 @@ common-generated := $(common-generated) bits/endian.h det_endian
 
 endif
 
-ifeq ($(subdir),stdio-common)
-ifneq ($(inhibit-siglist),yes)
-ifneq ($(cross-compiling),yes)
-ifeq	"$(filter %siglist.c,$(before-compile))" ""
-before-compile := $(before-compile) $(objpfx)siglist.c
-$(objpfx)siglist.c: $(objpfx)make_siglist
-	@rm -f $@
-	$(dir $<)$(notdir $<) > $@-tmp
-	mv $@-tmp $@
-
-make_siglist-CFLAGS = -DSIGNUM_H=\"$(shell pwd)/$(firstword $(wildcard \
-				   $(+sysdep_dirs:%=%/bits/signum.h)))\"
-$(objpfx)make_siglist: $(sysdep_dir)/generic/make_siglist.c
-	$(native-compile)
-
-generated := $(generated) make_siglist siglist.c
-endif
-endif
-endif
-endif
-
 ifeq ($(subdir),string)
 CFLAGS-wordcopy.c += -Wno-uninitialized
 endif
