--- a/sysdeps/unix/sysv/linux/configure.in
+++ b/sysdeps/unix/sysv/linux/configure.in
@@ -123,8 +123,11 @@ fi
 # We need some extensions to the `ldd' script.
 changequote(,)
 case "$machine" in
-  i[3456]86* | m68* | sparc/sparc32)
+  i[3456]86* | m68*)
     ldd_rewrite_script=../sysdeps/unix/sysv/linux/ldd-rewrite.sed
+    ;;
+  sparc/sparc32)
+    ldd_rewrite_script=../sysdeps/unix/sysv/linux/sparc/ldd-rewrite.sed
     ;;
   *)
     ;;
