--- a/libio/Makefile
+++ b/libio/Makefile
@@ -32,9 +32,9 @@ routines	:=							      \
 	iofgetpos64 iofopen64 iofsetpos64				      \
 	fputwc fputwc_u getwc getwc_u getwchar getwchar_u iofgetws iofgetws_u \
 	iofputws iofputws_u iogetwline iowpadn ioungetwc putwc putwc_u	      \
-	putwchar putwchar_u putchar putchar_u swprintf vwprintf wprintf	      \
-	wscanf fwscanf vwscanf vswprintf iovswscanf swscanf wgenops wstrops   \
-	wfileops iofwide						      \
+	putwchar putwchar_u putchar putchar_u fwprintf swprintf vwprintf      \
+	wprintf wscanf fwscanf vwscanf vswprintf iovswscanf swscanf wgenops   \
+	wstrops wfileops iofwide					      \
 									      \
 	clearerr feof ferror fileno fputc freopen fseek getc getchar	      \
 	memstream pclose putc putchar rewind setbuf setlinebuf vasprintf      \
