--- a/time/Makefile
+++ b/time/Makefile
@@ -28,7 +28,10 @@ routines := offtime asctime clock ctime ctime_r difftime \
 	    gettimeofday settimeofday adjtime tzset	 \
 	    tzfile getitimer setitimer			 \
 	    stime dysize timegm ftime			 \
-	    strptime getdate wcsftime
+	    strptime getdate wcsftime			 \
+	    clock_getres clock_gettime clock_setres	 \
+	    timer_create timer_delete timer_getoverr	 \
+	    timer_gettime timer_settime
 
 tests	:= test_time clocktest tst-posixtz tst-strptime tst_wcsftime
 
