--- a/FAQ.in
+++ b/FAQ.in
@@ -848,14 +848,12 @@ files.  You don't necessarily need to recompile the GNU C library since the
 only place where OPEN_MAX and FD_SETSIZE is really needed in the library
 itself is the size of fd_set which is used by select.
 
-The GNU C library is now (nearly) select free.  This means it internally has
-no limits imposed by the `fd_set' type.  Instead almost all places where the
+The GNU C library is now select free.  This means it internally has no
+limits imposed by the `fd_set' type.  Instead all places where the
 functionality is needed the `poll' function is used.
 
 If you increase the number of file descriptors in the kernel you don't need
-to recompile the C library.  The remaining select calls are in the RPC code.
-If your RPC daemons don't need more than FD_SETSIZE file descriptors, you
-don't need to change anything at all.
+to recompile the C library. 
 
 {UD} You can always get the maximum number of file descriptors a process is
 allowed to have open at any time using
