--- a/Rules
+++ b/Rules
@@ -191,26 +191,32 @@ $(stdio_lim:h=st): $(..)stdio-common/stdio_lim.h.in $(..)Rules \
 	echo '#include "$(..)posix/bits/posix1_lim.h"' |		\
 	SUNPRO_DEPENDENCIES='$(@:st=dT) $@'				\
 	$(CC) $(+includes) -E -dM -xc - -o $(@:st=hT)
+	echo '#include "$(..)misc/sys/uio.h"' |				\
+	SUNPRO_DEPENDENCIES='$(@:st=dT) $@'				\
+	$(CC) $(+includes) -E -dM -xc - | cat - >> $(@:st=hT)
 ifdef sed-remove-objpfx
 	sed $(sed-remove-objpfx) $(@:st=dT) > $(@:st=dt)
-	mv -f $(@:st=dt) $(@:st=d)
+	cat $(@:st=dt) >> $(@:st=d)
 else
-	mv -f $(@:st=dT) $(@:st=d)
+	cat $(@:st=dT) >> $(@:st=d)
 endif
-	fopen_max=`sed -n 's/^#define OPEN_MAX //p' $(@:st=hT)`; 	\
-	filename_max=`sed -n 's/^#define PATH_MAX //p' $(@:st=hT)`;	\
+	fopen_max=`sed -n 's/^#define OPEN_MAX //1p' $(@:st=hT)`; 	\
+	filename_max=`sed -n 's/^#define PATH_MAX //1p' $(@:st=hT)`;	\
+	iov_max=`sed -n 's/^#define UIO_MAXIOV //p' $(@:st=hT)`;	\
 	fopen_max=$${fopen_max:-16};					\
 	filename_max=$${filename_max:-1024};				\
+	iov_max=$${iov_max:-_XOPEN_IOV_MAX};				\
 	sed -e "s/@FOPEN_MAX@/$$fopen_max/"				\
 	    -e "s/@FILENAME_MAX@/$$filename_max/"			\
 	    -e "s/@L_tmpnam@/$(L_tmpnam)/"				\
 	    -e "s/@TMP_MAX@/$(TMP_MAX)/"				\
 	    -e "s/@L_ctermid@/$(L_ctermid)/"				\
 	    -e "s/@L_cuserid@/$(L_cuserid)/"				\
+	    -e "s/@IOV_MAX@/$$iov_max/"					\
 	    $< > $(@:st=h.new)
 	$(move-if-change) $(@:st=h.new) $(@:st=h)
 # Remove these last so that they can be examined if something went wrong.
-	rm -f $(@:st=hT) $(@:st=dT)
+	rm -f $(@:st=hT) $(@:st=dT) $(@:st=dt)
 	touch $@
 # Get dependencies.
 ifndef no_deps
