--- a/inet/Makefile
+++ b/inet/Makefile
@@ -45,7 +45,8 @@ routines := htonl htons		\
 	    rcmd rexec ruserpass \
 	    getnetgrent_r getnetgrent \
 	    getaliasent_r getaliasent getaliasname getaliasname_r \
-	    in6_addr getnameinfo if_index getipnodebyad freehostent
+	    in6_addr getnameinfo if_index getipnodebyad freehostent \
+	    getipnodebynm
 
 tests := htontest test_ifindex tst-ntoa tst-ether_aton tst-ipnode
 
